# HeartSensorLibrary

./: .codedocs  .gitignore  CMakeLists.txt  Doxyfile  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat  InitialSetup_Win32.bat  InitialSetup_X64.bat  InitialSetup_X64_VSPro.bat  LICENSE  README.md  RebuildAllConfigurations.bat  RebuildOfficialDistribution.bat
cmake/: Environment.cmake  ThirdParty.cmake  Version.cmake
hardware/adafruit_feather_gsr/: BLEAdafruitGSR.cpp  BLEAdafruitGSR.h  adafruit_feather_gsr.ino
src/: CMakeLists.txt
src/hslmath/: CMakeLists.txt
src/hslservice/: CMakeLists.txt
src/hslservice/client/: ClientConstants.h  ClientMath_CAPI.cpp  ClientMath_CAPI.h  HSLClient.cpp  HSLClient.h  HSLClient_CAPI.cpp  HSLClient_CAPI.h  HSLClient_export.h
src/hslservice/config/: HSLConfig.cpp  HSLConfig.h
src/hslservice/device/bluetoothle/: BluetoothLEApiInterface.cpp  BluetoothLEApiInterface.h  BluetoothLEDeviceGatt.cpp  BluetoothLEDeviceGatt.h  BluetoothLEServiceIDs.cpp  BluetoothLEServiceIDs.h  BluetoothUUID.cpp  BluetoothUUID.h  WinBluetoothLEDeviceGatt.cpp  WinBluetoothLEDeviceGatt.h
src/hslservice/device/enumerator/: DeviceEnumerator.h  SensorBluetoothLEDeviceEnumerator.cpp  SensorBluetoothLEDeviceEnumerator.h  SensorDeviceEnumerator.cpp  SensorDeviceEnumerator.h
src/hslservice/device/interface/: DeviceInterface.h  DevicePlatformInterface.h
src/hslservice/device/manager/: BluetoothLEDeviceManager.cpp  BluetoothLEDeviceManager.h  DeviceManager.cpp  DeviceManager.h  DeviceTypeManager.cpp  DeviceTypeManager.h  SensorManager.cpp  SensorManager.h
src/hslservice/device/sensors/adafruit/: AdafruitPacketProcessor.cpp  AdafruitPacketProcessor.h  AdafruitSensor.cpp  AdafruitSensor.h  AdafruitSensorConfig.cpp  AdafruitSensorConfig.h
src/hslservice/device/sensors/polar/: PolarPacketProcessor.cpp  PolarPacketProcessor.h  PolarSensor.cpp  PolarSensor.h  PolarSensorConfig.cpp  PolarSensorConfig.h
src/hslservice/device/sensors/polar_h10/: PolarH10Sensor.cpp  PolarH10Sensor.h
src/hslservice/device/view/: ServerDeviceView.cpp  ServerDeviceView.h  ServerSensorView.cpp  ServerSensorView.h
src/hslservice/platform/: BluetoothQueriesWin32.cpp  PlatformDeviceAPIWin32.cpp  WinBluetoothLEApi.cpp  WinBluetoothLEApi.h  WinDeviceUtils.cpp  WinDeviceUtils.h
src/hslservice/service/: HSLService.cpp  HSLService.h  HSLServiceInterface.h  ServiceRequestHandler.cpp  ServiceRequestHandler.h  ServiceVersion.h
src/hslservice/utils/: AtomicPrimitives.h  BufferBuilder.h  CircularBuffer.h  Logger.cpp  Logger.h  StackBuffer.h  Utility.cpp  Utility.h  WorkerThread.cpp
src/tests/: CMakeLists.txt  test_console_CAPI.cpp
